Fix carousel arrow z-index for mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -176,6 +176,19 @@ h3 {
 .three-col {
     min-height: 400px;
 }
+.left-arrow {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    z-index: 1;
+}
+
+.right-arrow {
+    position: absolute;
+    top: 45%;
+    right: 0;
+    z-index: 1;
+}
 
 @media (min-width: 40em) {
     .App-logo {
@@ -264,6 +277,20 @@ h3 {
 
     .three-col {
         height: 400px;
+    }
+
+    .left-arrow {
+        position: absolute;
+        top: 45%;
+        left: -5%;
+        z-index: 1;
+    }
+
+    .right-arrow {
+        position: absolute;
+        top: 45%;
+        right: -5%;
+        z-index: 1;
     }
 }
 
